--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser-dynamic": "^16.0.3",
     "@angular/router": "^16.0.3",
     "bootstrap": "^3.4.1",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
+    "ws": "^8.13.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
